--- a/terraform/002/request-template-aws.vm
+++ b/terraform/002/request-template-aws.vm
@@ -18,30 +18,22 @@
     \"path\": {
         \"parameterMap\": {
             #foreach($paramName in $path.keySet())
-            \"$paramName\": $util.escapeJavaScript($path.get($paramName))#if($foreach.hasNext),#end
+            \"$paramName\": \"$util.escapeJavaScript($path.get($paramName))\"#if($foreach.hasNext),#end
             #end
         }
     },
     \"querystring\": {
         \"parameterMap\":{
             #foreach($paramName in $querystring.keySet())
-            \"$paramName\": $util.escapeJavaScript($querystring.get($paramName))#if($foreach.hasNext),#end
+            \"$paramName\": \"$util.escapeJavaScript($querystring.get($paramName))\"#if($foreach.hasNext),#end
             #end
         }
     },
     \"header\": {
         \"parameterMap\": {
-        #if($stage == 'local')
-            #foreach($i in [0..16])#set($item = $header[$i])
-            #if($item[0])#if($i > 0),#end
-            \"$item[0]\": $util.escapeJavaScript($item[1])
-            #end
-            #end
-        #else
             #foreach($paramName in $header.keySet())
             \"$paramName\": \"$util.escapeJavaScript($header.get($paramName))\"#if($foreach.hasNext),#end
             #end
-        #end
         }
     },
     \"body\": $jsonBody
